2009-04-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/symbols.c:
   When updating global type definitions for opened documents, take
   also C++ namespace symbols into account and don't ignore symbols
   which are defined inside a scope.


2009-04-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugins.c:
   Don't show 'plugin is not binary compatible' messages on the status
   bar, only the status window.


2009-04-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/socket.c:
   When opening files from a remote instance on X11, set the window
   server time to encourage window managers to pop up the main window
   (related to #2735467 and #2276179).
 * src/main.c:
   When finished sending filenames to a remote instance, notify the
   environment that we finished starting up.


2009-04-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.h, src/utils.h, src/ui_utils.c:
   Sort Configuration Files menu.
   Add ui_menu_sort_by_label().
   Add foreach_list() macro.
 * src/editor.c:
   Fix autocompletion.


2009-04-07  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/main.c:
   Fix setting a wrong default window size when starting without an
   existing configuration.
 * src/editor.c, src/sciwrappers.c, src/sciwrapper.h:
   Make editor_highlight_braces() static.
   Remove unused wrapper functions.
 * src/editor.c, src/symbols.c, src/symbols.h:
   Prevent showing an empty macro list.
   Show only macros of the same filetype instead of all macros of all
   loaded filetypes.
 * src/ui_utils.c:
   Don't add opened project files to the GtkRecentManager.


2009-04-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Add Configuration Files item for snippets.conf.
 * src/highlighting.c, src/symbols.c:
   Fix 2 old uses of filetype IDs.


2009-04-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/interface.c, src/printing.c, geany.glade: