@@ -1,3 +1,10 @@
+2009-04-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/keyfile.c, src/keyfile.h, src/project.c:
+   Fix duplicating the recent files and projects lists when closing
+   a project.
+
+
 2009-04-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/symbols.c:
